--- a/Mestrado/Projeto5_LSTM.ipynb
+++ b/Mestrado/Projeto5_LSTM.ipynb
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "tNfTDG5D7WdF"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -47,12 +47,12 @@
       "metadata": {
         "id": "pQUTciA7JGUY"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
         "id": "LaQ1ga1K7hNK",
         "outputId": "edff1944-ffd4-417a-abe1-83fb07c88369"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +127,7 @@
         "id": "qPzR7D9D7kwX",
         "outputId": "3ab9371a-0c34-4d3d-ec03-aa408c1a4c9e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
         "id": "bPuhV3zF7mx1",
         "outputId": "c2e99e22-7357-44ef-ef3b-432e3d7ffe0d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +564,7 @@
         "id": "S4rUqj-z7o68",
         "outputId": "16f0153f-5fc4-4faa-e7c1-6015d9221d2b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
         "id": "vinGQrC87sQJ",
         "outputId": "935e616b-471d-4e9c-9634-496bc39cf592"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -920,7 +920,7 @@
         "id": "Uq7NkslG7uZ7",
         "outputId": "a3ffcc23-aefc-4e03-affc-7fefebbe7df8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -990,7 +990,7 @@
       "metadata": {
         "id": "rOwGYt9b9M5j"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1007,7 +1007,7 @@
         "id": "uzfQU6mC9RdI",
         "outputId": "2f07f35d-dd72-4b9a-9226-26d0cc621d96"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,7 +1031,7 @@
         "id": "XzmmFZ_a9Vjd",
         "outputId": "34ec81ec-e377-4fec-acc6-183d8a04eb52"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1052,7 +1052,7 @@
       "metadata": {
         "id": "4N85tDcr9X5N"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1068,7 +1068,7 @@
         "id": "uJH-9fO59dye",
         "outputId": "7ed4d97f-7378-4af3-8839-524d77c4b33f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1097,7 +1097,7 @@
         "id": "ghl22jmDFMRr",
         "outputId": "7311f708-0a5e-4d1e-dc77-a870a6acf286"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1121,7 +1121,7 @@
       "metadata": {
         "id": "MGhdrqSmGvXb"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1137,7 +1137,7 @@
         "id": "DUcqZLCCGxAv",
         "outputId": "bb50b2eb-88f3-40e7-e743-83454948b2ce"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1169,7 +1169,7 @@
       "metadata": {
         "id": "iJW2oVsbG1H2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1186,7 +1186,7 @@
         "id": "E_6hqHuY9bZt",
         "outputId": "7a107e08-5a27-4e4d-a1ec-aadefb451ad2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1510,7 +1510,7 @@
         "id": "W9Ku7rOr9svF",
         "outputId": "aabb6409-4b9f-4cfd-8d0b-5d10e8cb5a1f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1536,7 +1536,7 @@
         "id": "vY2DxVB-Edzp",
         "outputId": "10b9e1e6-8ff6-43ff-b11b-38babc73e3fa"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1569,7 +1569,7 @@
         "id": "Da7ji4yb9mXj",
         "outputId": "08d876bb-7e10-4090-9d47-2805730dcd36"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2007,7 +2007,7 @@
       "metadata": {
         "id": "qSN96dD79wuQ"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2018,7 +2018,7 @@
       "metadata": {
         "id": "19kvODVP90yC"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2030,7 +2030,7 @@
       "metadata": {
         "id": "vh2NFMoY921i"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2045,7 +2045,7 @@
         "id": "PruYjVjQ953B",
         "outputId": "9f4aaf8f-41a6-4c78-d467-8f9c8a9e4a5d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2065,7 +2065,7 @@
       "metadata": {
         "id": "bdJHvQcu974Y"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2076,7 +2076,7 @@
       "metadata": {
         "id": "OHseRofg9-N2"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2091,7 +2091,7 @@
       "metadata": {
         "id": "Cu7JzqpP9_2e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2102,7 +2102,7 @@
       "metadata": {
         "id": "4-MIs6co-B_y"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2119,7 +2119,7 @@
         "id": "eFTk_mgq-DXN",
         "outputId": "d04330d2-4f5b-4eab-955c-b2e93ac50824"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2141,7 +2141,7 @@
       "metadata": {
         "id": "ksmOr8KF-EoL"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2152,7 +2152,7 @@
       "metadata": {
         "id": "vjGJ1WZf-IGC"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2173,7 +2173,7 @@
       "metadata": {
         "id": "PNCGWtfw-JOt"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2186,7 +2186,7 @@
       "metadata": {
         "id": "qG6tQxUG-Kj3"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2205,7 +2205,7 @@
         "id": "MSJULUXA-MfE",
         "outputId": "deb8cadd-93b8-44a0-da99-270e67aa95db"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2332,7 +2332,7 @@
         "id": "IGSRRcGM-Nyi",
         "outputId": "0a006d48-f042-4272-ce6a-fe7bf25f1047"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2371,7 +2371,7 @@
         "id": "p8KhH8eR-Qtj",
         "outputId": "a3ad8d49-b828-4793-c96a-4648b58007de"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2397,7 +2397,7 @@
         "id": "SLNHHbIX-S8x",
         "outputId": "a81722a8-be94-494f-ed91-4ec26545f0af"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2419,7 +2419,7 @@
       "metadata": {
         "id": "6f0w9Zn5-UrB"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2434,7 +2434,7 @@
         },
         "outputId": "c51f3e9c-14b7-4e9b-d9d3-4005b5c59a17"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2468,7 +2468,7 @@
         },
         "outputId": "dec5dc45-3c97-4b9b-a338-d1d233b4c08a"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2494,6 +2494,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Os resultados mostram acurácia geral alta (0.94), excelente desempenho na classe *normal* (F1 ≈ 0.97) e F1 moderado na classe *anomalia* (0.44), o que eh esperado em um cenário desbalanceado e usando apenas um autoencoder não supervisionado. Como a anomalia eh um caso raro, acredito que faca sentido"
+      ],
+      "metadata": {
+        "id": "Nq7SieFPo2KZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(12,4))\n",
@@ -2513,7 +2522,7 @@
         },
         "outputId": "30847e88-0d9c-4516-b582-9284684073d5"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2526,6 +2535,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Esses picos acontecem quando a bomba começa a se comportar de forma diferente do normal, geralmente nos momentos marcados como BROKEN ou RECOVERING. Isso mostra que o autoencoder aprendeu como a máquina funciona normalmente e consegue indicar anomalias pelo aumento no erro de reconstrução."
+      ],
+      "metadata": {
+        "id": "tMaVHgUQp3TU"
+      }
     },
     {
       "cell_type": "code",
@@ -2551,7 +2569,7 @@
         },
         "outputId": "a2935073-41f2-4083-daf4-1940a1fe312d"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2564,6 +2582,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Quando comparamos os picos de erro com as janelas marcadas como anômalas, vemos que muitos deles coincidem. Também aparecem picos sem rótulo, o que pode indicar problemas que o dataset não registrou. Por outro lado, algumas anomalias têm erro baixo, mostrando que nem toda falha gera uma mudança forte nos sensores. Esse tipo de comportamento é comum em cenários reais de manutenção preditiva."
+      ],
+      "metadata": {
+        "id": "hLR0cK54qFRQ"
+      }
     },
     {
       "cell_type": "code",
@@ -2580,7 +2607,7 @@
         },
         "outputId": "ff80ab19-d3ed-48a9-c29f-e404ef3b5ed0"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2601,7 +2628,7 @@
       "metadata": {
         "id": "fHuTGCcFAO90"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2630,7 +2657,7 @@
         "id": "kQiRJojkAMxg",
         "outputId": "148e4d20-7828-49da-8391-8f5136b63da5"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2645,13 +2672,22 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Essa separação mostra que o autoencoder conseguiu resumir os dados de um jeito que diferencia bem quando a máquina está funcionando normalmente e quando está com problema. Ou seja, o espaço latente distingue claramente o comportamento normal do comportamento de falha."
+      ],
       "metadata": {
-        "id": "OH_2Cn1xEU0g"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "rKaWlAQzpRh1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para melhorar esse trabalho, seria interessante testar outras arquiteturas (como GRU), usar mais ou menos sensores ou combinar o autoencoder com algum modelo supervisionado."
+      ],
+      "metadata": {
+        "id": "szpRHvYHqUgb"
+      }
     }
   ]
 }
